k8s/clusters/cluster-0/manifests/security/authentik/outpost-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  namespace: security
spec:
  ingressClassName: nginx
  rules:
    - host: "ako.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              # Or, to use an external Outpost, create an ExternalName service and reference that here.
              # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  name: http
            path: /outpost.goauthentik.io
            pathType: Prefix
